# Football_Betting_Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.dvc/: config
configs/: global.yaml
configs/data/: baseline_processed.yaml  processed_v1.yaml
configs/dimensionality_reduction/: dimensionality_reduction_kernel_pca.yaml
configs/evaluation/: classification.yaml
configs/experiments/: base_logistic_regression.yaml  base_random_forest_with_dim_reduction.yaml
configs/models/: logistic_regression.yaml  random_forest.yaml
configs/preprocessing/: logistic_default.yaml
data/processed/: .gitignore  baseline_processed.parquet.dvc  processed_final_dataset_v1.parquet.dvc
notebooks/: 01_football_data_co_uk_cleaning.ipynb  01_understat_data_cleaning.ipynb
notebooks/cleaning/: 01_elo_ratings_cleaning.ipynb  01_football_data_co_uk_cleaning.ipynb  01_soccer_data_cleaning.ipynb  01_transfermarkt_data_cleaning.ipynb  01_transfermarkt_data_cleaning_part_2.ipynb  01_transfermarkt_data_cleaning_part_3.ipynb  01_understat_data_cleaning.ipynb
notebooks/cleaning_part_2/: 02_final_data_preparation.ipynb
notebooks/eda/: 03_eda.ipynb
references/: reference_list.md
reports/evaluation/logreg_baseline_v1/: predictions.csv
reports/evaluation/random_forest_baseline_v1/: predictions.csv
src/football_betting_analysis/: config.py  predict.py  train.py
src/football_betting_analysis/data/: data_cleaning.py  data_loader.py  fetch_football_data_co_uk_data.py  fetch_understat_data.py  load_datasets.py  load_football_data_co_uk_data.py  load_understat_data.py  (+5 more)
(+38 files in other folders)
