[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# PROJECT METADATA
[project]
name = "football_betting_analysis"
version = "0.1.0"
description = "A data-driven analysis of football performance and betting market efficiency"
authors = [
    { name = "Konstantin Ivanov" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "understatapi",
    "pyarrow",
    "rapidfuzz",
    "seaborn"
]


# SETUPTOOLS CONFIG
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


# OPTIONAL DEV DEPENDENCIES
[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "ipykernel"
]

# BLACK (FORMATTER)
[tool.black]
line-length = 88
target-version = ["py310"]


# FLAKE8 (LINTING)
[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]


# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]